BUG FIX   Eliminate Eclipse compiler warnings.